@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-01-22T01:07:05Z",
-  "count_outdated" : 513,
-  "uniques_outdated" : 340,
+  "timestamp" : "2025-01-27T01:06:47Z",
+  "count_outdated" : 514,
+  "uniques_outdated" : 341,
   "count" : 515,
   "uniques" : 342,
   "clones" : [
-    {
-      "timestamp": "2025-01-12T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2025-01-21T00:00:00Z",
       "count": 1,
